@@ -1,5 +1,10 @@
 2007-12-13  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/tarball.py: don't apply patches on already
+	unpacked and patched sources.
+
+2007-12-13  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/__init__.py, jhbuild/commands/autobuild.py,
 	jhbuild/commands/base.py, jhbuild/commands/bootstrap.py,
 	jhbuild/commands/checkbranches.py, jhbuild/commands/gui.py,
